# mmdit-test

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mmdit-motion/: README.md  for-test.ipynb  for-training-on-colab.ipynb  for-training-on-local.ipynb  gradio-test.py  main.py  pyproject.toml  sample.npy  test.ipynb
