[project]
name = "mmdit-motion"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "matplotlib",
  "torch",
  "torchvision",
  "torchinfo",
  "gradio",
  "transformers",
  "diffusers",
  "datasets",
  "accelerate",
  "sentencepiece",
  "mmdit",
  "ema-pytorch",
]
